# gesture-recognition

./: .gitignore  CMakeLists.txt  README.md
experiment/: README.md  debug.py
experiment/gesture_recognizer/pretrained/: __init__.py  blazepalm.py
experiment/gesture_recognizer/util/: __init__.py  box.py
src/: DataTypes.h  Entry.cpp  HandProcessor.cpp  HandProcessor.h  SystemEvent.h  SystemEvent.mm
